--- a/estilo.css
+++ b/estilo.css
@@ -17,3 +17,61 @@ body{
   font-family: 'Kirsty', sans-serif;
   color: goldenrod;
 }
+
+.container{
+  display: flex;
+  justify-content: center;
+  
+}
+
+.card{
+  width: 300px;
+  margin: 0 10px;
+  border-radius: 6px;
+  overflow: hidden;
+  background: #fff;
+  box-shadow: 0px 1px 10px rgba(0,0,0,0.2);
+  cursor: pointer;
+  transition: all 400ms ease;
+}
+
+.card:hover{
+  box-shadow: 5px 5px 20px rgba(0,0,0,0.4);
+  transform: translateY(-3%);
+}
+
+.card img{
+  width: 100%;
+  height: auto;
+}
+
+.card .contenido{
+  padding: 15px;
+  text-align: center;
+}
+
+.card .contenido p{
+  line-height: 1.5;
+  color: #6a6a6a;
+}
+
+.card .contenido h3{
+  font-weight: 400;
+  margin-bottom: 15px;
+}
+
+.card .contenido a{
+  text-decoration: none;
+  display: inline-block;
+  padding: 10px;
+  margin-top: 10px;
+  color: aqua;
+  border: 1px solid aqua;
+  border-radius: 4px;
+  transition: all 400ms ease;
+}
+
+.card + hr {
+  display: none; /* Oculta todas las líneas <hr> que estén directamente después de .card */
+}
+
